--- a/homepage/index.html
+++ b/homepage/index.html
@@ -7,6 +7,9 @@
 </head>
 
 <body bgcolor="<li/>000000" marginwidth="0" marginheight="0" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+
+<!-- cataloger,cataloguer,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database -->
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
@@ -54,8 +57,8 @@
   <tr>
     <td></td>
     <td rowspan="3" valign="top" class="content_main"><span class="content_main_bold">Data Crow</span><br><br>
-      Data Crow is the <strong>ultimate cataloguer</strong> (or cataloger) and media organiser. Always wanted to manage all your collections in one product? You want a product you can customize to your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all your collected items. You can use the excellent online services to retrieve the information instead of typing all the information yourself.<br>
-Don't strain yourself in organizing your items and trying to keep track of their location, start using  		the best cataloging software today. Start using Data Crow. <br><br>
+      Data Crow is the <strong>ultimate media cataloger</strong> and media organiser. Always wanted to manage all your collections in one product? You want a product you can customize to your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all your collected items. You can use the excellent online services to retrieve the information instead of typing all the information yourself.<br>
+Don't strain yourself in organizing your items and trying to keep track of their location, start using the best cataloging software today. Start using Data Crow. <br><br>
 <li/> Out of the box experience
 <li/> Audio, software, book, movie and photo collections organizer
 <li/> Customizable UI: select a skin, change the fonts, customize views and much more
@@ -99,9 +102,9 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td colspan="3" class="menu1o">Full version</td>
     </tr>
   <tr>
-    <td class="menu2" onClick=window.top.location.href='install.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
-    <td class="menu3" onClick=window.top.location.href='install.msi' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
-    <td class="menu4" onClick=window.top.location.href='winstall.msi' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
@@ -110,15 +113,15 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td colspan="3" class="menu8o">Web module</td>
     </tr>
   <tr>
-    <td class="menu7" onClick=window.top.location.href='install.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
-    <td class="menu6" onClick=window.top.location.href='install.msi' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
-    <td class="menu5" onClick=window.top.location.href='winstall.msi' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
   </tr>
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
   <tr>
-    <td colspan="3" class="menu10" onClick=window.top.location.href='souce.code' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
     </tr>
   <tr>
     <td height="10" colspan="3"></td>
