--- a/homepage/news.html
+++ b/homepage/news.html
@@ -5,7 +5,11 @@
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
+
 <body bgcolor="#000000" marginwidth="0" marginheight="0" leftmargin="0" rightmargin="0" topmargin="0" bottommargin="0">
+
+<!-- cataloger,cataloguer,cataloging,collection,collections,books,movies,software,games,organiser,organising,organizer,organizing,mp3,ogg,divx,xvid,database -->
+
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td rowspan="5" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
