*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>DataCrow - Donate</title>
+    <title>Data Crow - Donate</title>
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
@@ -47,7 +47,121 @@
 </td>
   </tr>
   <tr>
-    <td class="bg2" ><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+    <td class="bg2" >
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="20" height="20"></td>
+    <td width="550"></td>
+    <td width="20"></td>
+    <td></td>
+    <td width="20"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td rowspan="3" valign="top" class="content_main">
+
+    <span class="content_main_bold">Donate</span><br><br>
+
+    Hopefully you find Data Crow I better then good experience. Maybe you are wondering what you could
+
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+        <input type="hidden" name="cmd" value="_s-xclick">
+        <input type="hidden" name="hosted_button_id" value="84491">
+        <input type="image" src="https://www.paypal.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="">
+        <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
+    </form>
+
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+
+    </td>
+
+    <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span>
+
+      <br><br>
+
+      <!-- NEWS -->
+
+      <span class="content_main_bold">18/01/2009<br>New website</span><br>
+      The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+      <br><br>
+
+      <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+      This release fixes the reporting functionality and contains fixes for other minor issues.
+
+      <!-- NEWS END -->
+
+      </td>
+
+
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Quick link:</span><br><br>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td colspan="3" class="menu1o">Full version</td>
+    </tr>
+
+
+  <!-- DOWNLOAD -->
+
+  <tr>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu8o">Web module</td>
+    </tr>
+  <tr>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+  </tr>
+
+  <!-- END DOWNLOAD -->
+
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="menu9" onClick=window.top.location.href='download.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Go to Download page</td>
+  </tr>
+    </table>
+    </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td height="20"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+</table>
+
+
+    </td>
   </tr>
   <tr>
     <td height="65" background="pics/DONATE_footer.jpg"></td>
