--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>DataCrow - Home</title>
+    <title>Data Crow - Cataloger</title>
     <link href="css/main.css" rel="stylesheet" type="text/css" />
     <link href="css/menu.css" rel="stylesheet" type="text/css" />
 </head>
@@ -46,7 +46,9 @@
 </td>
   </tr>
   <tr>
-    <td class="bg1"><table width="800" border="0" cellspacing="0" cellpadding="0">
+    <td class="bg1">
+
+<table width="800" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td width="20" height="20"></td>
     <td width="550"></td>
@@ -56,37 +58,63 @@
   </tr>
   <tr>
     <td></td>
-    <td rowspan="3" valign="top" class="content_main"><span class="content_main_bold">Data Crow</span><br><br>
-      Data Crow is the <strong>ultimate media cataloger</strong> and media organiser. Always wanted to manage all your collections in one product? You want a product you can customize to your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all your collected items. You can use the excellent online services to retrieve the information instead of typing all the information yourself.<br>
-Don't strain yourself in organizing your items and trying to keep track of their location, start using the best cataloging software today. Start using Data Crow. <br><br>
-<li/> Out of the box experience
-<li/> Audio, software, book, movie and photo collections organizer
-<li/> Customizable UI: select a skin, change the fonts, customize views and much more
-<li/> Create your own module from within Data Crow!
-<li/> Optional web module; web interface + integrated web server
-<li/> Everything in Data Crow can be modified to your own needs!
-<li/> Add your own categories, genres, states, ..
-<li/> Rename your files based on the item information in Data Crow
-<li/> Advanced user management
-<li/> Keep track of loaned items using the simple loan management system
-<li/> Use online services like Amazon.com, Imdb.com, Musicbrainz.org, and many others...
-<li/> The internal powerful image editor enables you to manipulate any image
-<li/> Create pdf and html reports. Create your own reports by supplying new XSLT documents
-<li/> Use templates to fill your default values
-<li/> Mass update your items
-<li/> Auto number your items using the auto numbering functionality
-<li/> Create a backup of your items and settings by using the "backup & restore" functionality
-<li/> Easily upgrade to newer versions of Data Crow
-<br><br>
-Data Crow is 100% free and 100% free of ads, viruses and spyware.
-<br>
-Data Crow runs on any system where Java is installed.
-<br><br></td>
+    <td rowspan="3" valign="top" class="content_main">
+
+    <span class="content_main_bold">Data Crow</span><br><br>
+
+    Data Crow is the <b>ultimate media cataloger</b> and media organiser.
+    Always wanted to manage all your collections in one product?
+    You want a product you can customize to your needs? Your search ends here!
+    Using Data Crow allows you to create a huge database containing all your collected items.
+    You can use the excellent online services to retrieve the information instead of typing all the information yourself.
+
+    <br><br>
+
+    Don't strain yourself in organizing your items and trying to keep track of their location, start using <h2>the best cataloger</h2>
+    today. Start using Data Crow.<br><br>
+
+    <li/> Highly customizable.
+    <li/> Audio, software, book, movie and photo <h1>collection cataloger</h1>
+    <li/> Retrieve information from services like Amazon.com and Imdb.com
+    <li/> Optional web module; web interface + integrated web server
+    <li/> Rename your files based on the item information in Data Crow
+    <li/> Advanced user management
+    <li/> Loan management
+    <li/> PDF and HTML reporting
+    <li/> Easily upgrade to newer versions
+    <li/> Create new modules to, for example, maintain your stamp collection
+
+    <br><br>
+    Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
+    Data Crow runs on any system where <strong>Java from Sun</strong> is installed.
+
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+
+    </td>
+
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
-    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span><br>
-      <br>
-      <span class="content_main_bold">02/01/2009<br>3.4.6 has been released</span><br>
-Due to the overwhelming response and complaints about having to set the DATACROW_HOME directory or to supply the -dir: parameter I have decided to change this with this early release. Oh, and there's something new as well; a French translation! Big thanks to Pierre-Yves DANTEC! </td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span>
+
+      <br><br>
+
+      <!-- NEWS -->
+
+      <span class="content_main_bold">18/01/2009<br>New website</span><br>
+      The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+      <br><br>
+
+      <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+      This release fixes the reporting functionality and contains fixes for other minor issues.
+
+      <!-- NEWS END -->
+
+      </td>
+
+
     <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
   </tr>
   <tr>
@@ -101,6 +129,10 @@ Due to the overwhelming response and complaints about having to set the DATACROW
   <tr>
     <td colspan="3" class="menu1o">Full version</td>
     </tr>
+
+
+  <!-- DOWNLOAD -->
+
   <tr>
     <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
     <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
@@ -117,6 +149,9 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
     <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
   </tr>
+
+  <!-- END DOWNLOAD -->
+
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
@@ -140,7 +175,10 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
     <td style="background-image: url('pics/table_bg_corner.png');"></td>
   </tr>
-</table></td>
+</table>
+
+
+    </td>
   </tr>
   <tr>
     <td height="65" background="pics/HOME_footer.jpg"></td>
