*** empty log message ***

--- a/homepage/donate.html
+++ b/homepage/donate.html
@@ -60,26 +60,35 @@
     <td></td>
     <td rowspan="3" valign="top" class="content_main">
 
-    <span class="content_main_bold">Donate</span><br><br>
+    <div class="scrollable_div">
 
-    Hopefully you find Data Crow I better then good experience. Maybe you are wondering what you could
+        <span class="content_main_bold">Donate</span><br><br>
 
-    <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
-        <input type="hidden" name="cmd" value="_s-xclick">
-        <input type="hidden" name="hosted_button_id" value="84491">
-        <input type="image" src="https://www.paypal.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="">
-        <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
-    </form>
+        I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be done
+        via Paypal. In case you want your donation to be visible to the public I suggest you use the Sourceforge.net donation method (which also uses Paypal).
 
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
+        <br><br><br>
+
+        <span class="content_main_bold">Direct Paypal donation</span><br><br>
+        <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
+            <input type="hidden" name="cmd" value="_s-xclick">
+            <input type="hidden" name="hosted_button_id" value="84491">
+            <input type="image" src="https://www.paypal.com/nl_NL/NL/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="">
+            <img alt="" border="0" src="https://www.paypal.com/nl_NL/i/scr/pixel.gif" width="1" height="1">
+        </form>
+
+        <span class="content_main_bold">Paypal donation via Sourceforge.net</span><br><br>
+        <a href="http://sourceforge.net/donate/index.php?group_id=84631" target="information"><img src="http://images.sourceforge.net/images/project-support.jpg" width="88" height="32" border="0" alt="Sourceforge.net" /></a>
+
+    </div>
 
     </td>
 
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
-    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span>
+    <td valign="top" class="content_main">
+
+
+      <span class="content_main_bold">Latest news</span>
 
       <br><br>
 
@@ -95,15 +104,15 @@
 
       <!-- NEWS END -->
 
-      </td>
+    </td>
 
 
-    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;">&nbsp;</td>
   </tr>
   <tr>
     <td></td>
     <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
-    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');">&nbsp;</td>
   </tr>
   <tr>
     <td></td>
