--- a/homepage/history.html
+++ b/homepage/history.html
@@ -46,7 +46,10 @@
 </td>
   </tr>
   <tr>
-    <td class="bg6"><table width="800" border="0" cellspacing="0" cellpadding="0">
+    <td class="bg6">
+
+
+    <table width="800" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td width="20" height="20"></td>
     <td width="550"></td>
@@ -58,37 +61,63 @@
     <td></td>
     <td rowspan="3" valign="top" class="content_main">
 
-    <span class="content_main_bold">Data Crow</span><br><br>
-      Data Crow is the <strong>ultimate cataloger</strong> and media organiser. Always wanted to manage all your collections in one product? You want a product you can customize to your needs? Your search ends here! Using Data Crow allows you to create a huge database containing all your collected items. You can use the excellent online services to retrieve the information instead of typing all the information yourself.<br>
-Don't strain yourself in organizing your items and trying to keep track of their location, start using the best cataloging software today. Start using Data Crow. <br><br>
-<li/> Out of the box experience
-<li/> Audio, software, book, movie and photo collections organizer
-<li/> Customizable UI: select a skin, change the fonts, customize views and much more
-<li/> Create your own module from within Data Crow!
-<li/> Optional web module; web interface + integrated web server
-<li/> Everything in Data Crow can be modified to your own needs!
-<li/> Add your own categories, genres, states, ..
-<li/> Rename your files based on the item information in Data Crow
-<li/> Advanced user management
-<li/> Keep track of loaned items using the simple loan management system
-<li/> Use online services like Amazon.com, Imdb.com, Musicbrainz.org, and many others...
-<li/> The internal powerful image editor enables you to manipulate any image
-<li/> Create pdf and html reports. Create your own reports by supplying new XSLT documents
-<li/> Use templates to fill your default values
-<li/> Mass update your items
-<li/> Auto number your items using the auto numbering functionality
-<li/> Create a backup of your items and settings by using the "backup & restore" functionality
-<li/> Easily upgrade to newer versions of Data Crow
-<br><br>
-Data Crow is 100% free and 100% free of ads, viruses and spyware.
-<br>
-Data Crow runs on any system where Java is installed.
-<br><br></td>
+    <div class="scrollable_div">
+
+        <span class="content_main_bold">History</span><br><br>
+        This page explains a bit more about the history of this cataloging software.
+
+        <br><br>
+        <span class="content_main_bold">LibCD</span><br><br>
+        I would like to explain a bit more about the history of Data Crow. It all started when I created a small program called LibCD. This product allowed users to insert file information manually. It did not have an item form and only had the table view (which still exists today). This program did not attract any attention, I was the sole user. I started the LibCD project to get my own list of software CD's in a program and to improve my programming skills. This project was started off somewhere in 2001.
+
+        <br><br>
+        <span class="content_main_bold">CD Library</span><br><br>
+        In 2002, February to be exact, I discovered Sourceforge.net and decided to make my little project public. I also decided to change the name from LibCD to CD Library. This software allowed registration of software and mp3's. I would like to say it had two modules, but then I would be lying. The software was static and users had only very limited control over the behavior of the product. It was able to import a sort of CSV file (via a very complex UI) and was also capable of parsing information from MP3 files. Again this version did not really get anyone excited and I remained the sole user. The latest version of CD Library is still available for download at: <a href="http://sourceforge.net/projects/libcd/">Sourceforge.net</a>.
+
+        <br><br>
+        <span class="content_main_bold">Data Crow</span><br><br>
+        Then came the year 2003. During a holiday in France I came to the decision to create an altogether new cataloguing product. The goals were to attract more attention, to add new modules and to use online services instead of relying only on file parsing. CD library was canned and a new product was born with the name Data Crow. The name was chosen by my wife (who was my girlfriend at the time) so I can neither be blamed or credited for it.<br />
+        <br><br>
+        The software slowly but surely became more flexible. The source code was change to be more generic (where possible) and extensibility and code reuse became the main areas of attention. The online search became more and more important. It allowed the catalogued items to be enriched with information from web sites like Amazon, Imdb, MusicBrainz and many others (with more still being added).<br />
+        The Data Crow 3 version introduced wizards for creating modules. Not many people know this but the Data Crow 3 version was a total rewrite of the core of Data Crow. The new flexible module structure allowed modules to be defined in an XML format. The underlying database was maintained by the rewritten data layer. To allow quicker access to the data all items were loaded in memory during startup. Essentially Data Crow now had its very own persistance layer.
+        <br><br>
+        The ability to create user modules was requested by many users. The strength of this functionality was that, even though these modules lacked online service and file import, they benefited greatly from the Data Crow platform and the tools that it offered. The platform offered: loan management, two views, grouping, a quick view, filtering, security, advanced field settings, the item form, item deletion, updating and creation and many, many other features.
+
+        <br><br>
+        <span class="content_main_bold">Present</span><br><br>
+        Data Crow has become a framework where any kind of module can be created, new reports can be added and plugins can be created. It is slowly attracting more and more attention to itself and I belief it will continue to do so.
+        I am proud of the user base Data Crow has gained over the years. Many users have helped me to improve Data Crow. I thank you all sincerely!
+
+        <br><br>
+        <span class="content_main_bold">Future</span><br><br>
+        One thing I have discovered is that this product will never be finished. I never dreamed that this project would continue expand its feature set over and over again. After all, it is just a tool to catalog / catalogue your collections. New functionality like a chat service will be added and Data Crow will be changed so that items can have an unlimited amount of images and files. The number of online services will be expanded gradually and documentation will be released focussing on plugin development and the creation of custom online services.
+
+    </div>
+
+    </td>
+
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
-    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span><br>
-      <br>
-      <span class="content_main_bold">02/01/2009<br>3.4.6 has been released</span><br>
-Due to the overwhelming response and complaints about having to set the DATACROW_HOME directory or to supply the -dir: parameter I have decided to change this with this early release. Oh, and there's something new as well; a French translation! Big thanks to Pierre-Yves DANTEC! </td>
+    <td valign="top" class="content_main">
+
+    <!-- NEWS -->
+
+    <span class="content_main_bold">Latest news</span>
+
+    <br><br>
+
+    <span class="content_main_bold">19/01/2009<br>New website</span><br>
+    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+    <br><br>
+
+    <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+    This release fixes the reporting functionality and contains fixes for other minor issues.
+
+    <!-- NEWS END -->
+
+  </td>
+
+
     <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
   </tr>
   <tr>
@@ -103,6 +132,10 @@ Due to the overwhelming response and complaints about having to set the DATACROW
   <tr>
     <td colspan="3" class="menu1o">Full version</td>
     </tr>
+
+
+  <!-- DOWNLOAD -->
+
   <tr>
     <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
     <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
@@ -119,6 +152,9 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
     <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
   </tr>
+
+  <!-- END DOWNLOAD -->
+
   <tr>
     <td height="10" colspan="3"></td>
     </tr>
@@ -142,7 +178,9 @@ Due to the overwhelming response and complaints about having to set the DATACROW
     <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
     <td style="background-image: url('pics/table_bg_corner.png');"></td>
   </tr>
-</table></td>
+</table>
+
+</td>
   </tr>
   <tr>
     <td height="65" align="center" valign="middle" background="pics/HISTORY_footer.jpg">&nbsp;</td>
