--- a/homepage/index.html
+++ b/homepage/index.html
@@ -13,7 +13,7 @@
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
-    <td width="800" height="200" align="center" valign="top" background="pics/HOME_header.jpg" onClick=window.top.location.href='index.html' style="cursor:pointer"></td>
+    <td width="800" height="200" align="center" valign="top" background="pics/HOME_header.jpg" onClick=window.top.location.href='index.html' style="cursor:pointer" alt="Data Crow - Cataloger Software"></td>
     <td rowspan="4" style="background-image: url('pics/bg.jpg'); background-repeat: repeat-x; background-color: black;">&nbsp;</td>
   </tr>
   <tr>
@@ -60,59 +60,60 @@
     <td></td>
     <td rowspan="3" valign="top" class="content_main">
 
-    <span class="content_main_bold">Data Crow</span><br><br>
+    <div class="scrollable_div">
 
-    Data Crow is the <b>ultimate media cataloger</b> and media organiser.
-    Always wanted to manage all your collections in one product?
-    You want a product you can customize to your needs? Your search ends here!
-    Using Data Crow allows you to create a huge database containing all your collected items.
-    You can use the excellent online services to retrieve the information instead of typing all the information yourself.
+        <span class="content_main_bold">Data Crow</span><br><br>
 
-    <br><br>
+        Data Crow is the <b>ultimate media cataloger</b> and media organiser.
+        Always wanted to manage all your collections in one product?
+        You want a product you can customize to your needs? Your search ends here!
+        Using Data Crow allows you to create a huge database containing all your collected items.
+        You can use the excellent online services to retrieve the information instead of typing all the information yourself.
 
-    Don't strain yourself in organizing your items and trying to keep track of their location, start using <h2>the best cataloger</h2>
-    today. Start using Data Crow.<br><br>
+        <br><br>
 
-    <li/> Highly customizable.
-    <li/> Audio, software, book, movie and photo <h1>collection cataloger</h1>
-    <li/> Retrieve information from services like Amazon.com and Imdb.com
-    <li/> Optional web module; web interface + integrated web server
-    <li/> Rename your files based on the item information in Data Crow
-    <li/> Advanced user management
-    <li/> Loan management
-    <li/> PDF and HTML reporting
-    <li/> Easily upgrade to newer versions
-    <li/> Create new modules to, for example, maintain your stamp collection
+        Don't strain yourself in organizing your items and trying to keep track of their location, start using <h2>the best cataloger</h2>
+        today. Start using Data Crow.<br><br>
 
-    <br><br>
-    Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
-    Data Crow runs on any system where <strong>Java from Sun</strong> is installed.
+        <li/> Highly customizable.
+        <li/> Audio, software, book, movie and photo <h1>collection cataloger</h1>
+        <li/> Retrieve information from services like Amazon.com and Imdb.com
+        <li/> Optional web module; web interface + integrated web server
+        <li/> Rename your files based on the item information in Data Crow
+        <li/> Advanced user management
+        <li/> Loan management
+        <li/> PDF and HTML reporting
+        <li/> Easily upgrade to newer versions
+        <li/> Create new modules to, for example, maintain your stamp collection
 
-    <br><br>
-    <br><br>
-    <br><br>
-    <br><br>
+        <br><br>
+        Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
+        Data Crow runs on any system where <strong>Java from Sun</strong> is installed.
+
+    </div>
 
     </td>
 
     <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
-    <td valign="top" class="content_main"><span class="content_main_bold">Latest news</span>
+    <td valign="top" class="content_main">
 
-      <br><br>
+    <!-- NEWS -->
 
-      <!-- NEWS -->
+    <span class="content_main_bold">Latest news</span>
 
-      <span class="content_main_bold">18/01/2009<br>New website</span><br>
-      The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+    <br><br>
 
-      <br><br>
+    <span class="content_main_bold">19/01/2009<br>New website</span><br>
+    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
 
-      <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
-      This release fixes the reporting functionality and contains fixes for other minor issues.
+    <br><br>
 
-      <!-- NEWS END -->
+    <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+    This release fixes the reporting functionality and contains fixes for other minor issues.
 
-      </td>
+    <!-- NEWS END -->
+
+  </td>
 
 
     <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
