--- a/homepage/contact.html
+++ b/homepage/contact.html
@@ -47,7 +47,127 @@
 </td>
   </tr>
   <tr>
-    <td class="bg9"><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+    <td class="bg9">
+
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="20" height="20"></td>
+    <td width="550"></td>
+    <td width="20"></td>
+    <td></td>
+    <td width="20"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td rowspan="3" valign="top" class="content_main">
+
+    <div class="scrollable_div">
+
+        <span class="content_main_bold">Contact Information</span><br><br>
+
+        Feel free to contact me (Robert Jan van der Waals) about Data Crow related subjects. Please use the links
+        in the feedback section of this page to report a bug or ask for a new feature.
+
+        <br><br>
+        <span class="content_main_bold">Feedback</span><br><br>
+        <a href="http://sourceforge.net/tracker/?func=add&group_id=84631&atid=573422" target="main">Report a Bug</a><br>
+        <a href="http://sourceforge.net/tracker/?func=add&group_id=84631&atid=573425" target="main">Request a Feature</a>
+
+        <br><br>
+
+        <span class="content_main_bold">E-mail</span><br><br>
+        <a href="mailto:info@datacrow.net?Subject=Information Request">info@datacrow.net</a>
+        <a href="mailto:support@datacrow.net?Subject=Information Request">support@datacrow.net</a>
+
+    </div>
+
+    </td>
+
+    <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td valign="top" class="content_main">
+
+    <!-- NEWS -->
+
+    <span class="content_main_bold">Latest news</span>
+
+    <br><br>
+
+    <span class="content_main_bold">19/01/2009<br>New website</span><br>
+    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+    <br><br>
+
+    <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+    This release fixes the reporting functionality and contains fixes for other minor issues.
+
+    <!-- NEWS END -->
+
+  </td>
+
+
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Quick link:</span><br><br>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td colspan="3" class="menu1o">Full version</td>
+    </tr>
+
+
+  <!-- DOWNLOAD -->
+
+  <tr>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu8o">Web module</td>
+    </tr>
+  <tr>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+  </tr>
+
+  <!-- END DOWNLOAD -->
+
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="menu9" onClick=window.top.location.href='download.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Go to Download page</td>
+  </tr>
+    </table>
+    </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td height="20"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+</table>
+
+    </td>
   </tr>
   <tr>
     <td height="65" background="pics/CONTACT_footer.jpg"></td>
