--- a/homepage/reviews.html
+++ b/homepage/reviews.html
@@ -46,7 +46,138 @@
 </td>
   </tr>
   <tr>
-    <td class="bg10"><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+    <td class="bg10">
+
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="20" height="20"></td>
+    <td width="550"></td>
+    <td width="20"></td>
+    <td></td>
+    <td width="20"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td rowspan="3" valign="top" class="content_main">
+
+    <div class="scrollable_div">
+
+        <span class="content_main_bold">Reviews</span><br><br>
+        There are some sites which have written an article or a review on Data Crow. Some of these reviews might be based on an older version of the Data Crow cataloguer software. However these reviews and articles might still give you a better impression of the Data Crow software.
+
+        <br><br>
+        <span class="content_main_bold">Penguin sightings review on Data Crow 3.2</span><br><br>
+
+        <i>Chances are, that somewhere in your house, you have a tall stack of music CDs. Perhaps not one, but two, or three, or even more, stacked up all over the place. Maybe you also have a shelf full of DVDs, as well, and a pile of video games next to your game console. Like most people, you probably aren’t very organized, either, and more often than not, you can’t remember which titles you have, much less find them all. And then, maybe, you lend out items from your collection to some of your friends. Can you always remember to whom it was that you gave what? If this is an accurate depiction of your life, then Data Crow is for you.</i>
+        <a href="http://www.penguinsightings.org/database/data-crow/">full review</a>
+
+        <br><br>
+        <span class="content_main_bold">Computer Totaal</span><br><br>
+        <i>Wie vroeger een verzameling aanlegde, deed dit met postzegels, theezakjes, kroonkurken, voetbalplaatjes etc. Tegenwoordig is het moeilijk om geen verzamelaar te zijn. Foto’s, video’s, films, software, contactpersonen: er zijn zoveel facetten van ons leven die te groot of uitgebreid zijn om te onthouden, dat het wel heel handig zou zijn als er één programma was om al die dingen te organiseren. Data Crow pretendeert dat programma te zijn.</i>
+        <a href="http://www.computertotaal.nl/web/Artikelpaginas/Download-artikel/Data-Crow-3.3.htm">full review</a>
+
+        <br><br>
+        <span class="content_main_bold">Softpedia's review on Data Crow 2.9.1 beta</span><br><br>
+        <i>Data Crow is a media cataloger software with many features which makes collection
+         managing a very easy and pleasant process. However, it needs a bit more polishing and bug fixes before it could be described as 'perfect'....</i>
+        <a href="http://www.softpedia.com/reviews/linux/Data-Crow-Review-40868.shtml">full review</a>
+
+        <br><br>
+        <span class="content_main_bold">Linux.com's article on Data Crow</span><br><br>
+        <i>Data Crow is a Java application, so you'll need to have Java installed on your machine before you download the most recent production version's binary zipfile. Unzip the file in a directory where you want Data Crow to live, and start Data Crow by running java -jar datacrow.jar. You might notice that it takes Data Crow a bit of time to start, even on a relatively fast machine. I'm running it on an AMD X2 4200+ system with 4GB of RAM and it still seems slow to start. However, once it's loaded, Data Crow is respectably fast...</i>
+        <a href="http://www.linux.com/feature/59954">full text</a>
+
+    </div>
+
+    </td>
+
+    <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td valign="top" class="content_main">
+
+    <!-- NEWS -->
+
+    <span class="content_main_bold">Latest news</span>
+
+    <br><br>
+
+    <span class="content_main_bold">19/01/2009<br>New website</span><br>
+    The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+    <br><br>
+
+    <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+    This release fixes the reporting functionality and contains fixes for other minor issues.
+
+    <!-- NEWS END -->
+
+  </td>
+
+
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Quick link:</span><br><br>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td colspan="3" class="menu1o">Full version</td>
+    </tr>
+
+
+  <!-- DOWNLOAD -->
+
+  <tr>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu8o">Web module</td>
+    </tr>
+  <tr>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+  </tr>
+
+  <!-- END DOWNLOAD -->
+
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="menu9" onClick=window.top.location.href='download.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Go to Download page</td>
+  </tr>
+    </table>
+    </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td height="20"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+</table>
+
+
+
+    </td>
   </tr>
   <tr>
     <td height="65" background="pics/REVIEWS_footer.jpg"></td>
