--- a/homepage/screenshots.html
+++ b/homepage/screenshots.html
@@ -46,7 +46,142 @@
 </td>
   </tr>
   <tr>
-    <td class="bg4"><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /></td>
+    <td class="bg4">
+
+<table width="800" border="0" cellspacing="0" cellpadding="0">
+  <tr>
+    <td width="20" height="20"></td>
+    <td width="550"></td>
+    <td width="20"></td>
+    <td></td>
+    <td width="20"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td rowspan="3" valign="top" class="content_main">
+
+    <div class="scrollable_div">
+
+        <span class="content_main_bold">Data Crow</span><br><br>
+
+        <a href="pics/screenshots/software.png" target="new"><img src="pics/screenshots/software_small.png" alt="Organiser,Organizer,Cataloger" border="0"></a>
+        <br><i>Software module; the main screen.</i><br><br>
+
+        <a href="pics/screenshots/software_skinned.png" target="new"><img src="pics/screenshots/software_skinned_small.png" alt="Organize,Organise" border="0"></a>
+        <br><i>Same as above but using one of the many skins.</i><br><br>
+
+        <a href="pics/screenshots/onlinesearch_movie.png" target="new"><img src="pics/screenshots/onlinesearch_movie_small.png" alt="Organiser,Organizer" border="0"></a>
+        <br><i>Online movie search using Imdb.com.</i><br><br>
+
+        <a href="pics/screenshots/itemform_audiocd.png" target="new"><img src="pics/screenshots/itemform_audiocd_small.png" alt="Organize,Organise" border="0"></a>
+        <br><i>Audio CD form.</i><br><br>
+
+        <a href="pics/screenshots/fieldsettings.png" target="new"><img src="pics/screenshots/fieldsettings_small.png" alt="Organiser,Organizer" border="0"></a>
+        <br><i>Field settings.</i><br><br>
+
+        <a href="pics/screenshots/fileimport.png" target="new"><img src="pics/screenshots/fileimport_small.png" alt="Organiser,Organizer" border="0"></a>
+        <br><i>File information import.</i><br><br>
+
+        <br><br>
+        <span class="content_main_bold">Web Module</span><br><br>
+        <a href="pics/screenshots/webmodule.png" target="new"><img src="pics/screenshots/webmodule_small.png" alt="Organiser,Organizer" border="0"></a>
+        <br><i>Partial screenshot of the web interface.</i><br><br>
+
+        <a href="pics/screenshots/webmodule_itemform.png" target="new"><img src="pics/screenshots/webmodule_itemform_small.png" alt="Organiser,Organizer" border="0"></a>
+        <br><i>Web item form.</i><br><br>
+
+    </div>
+
+    </td>
+
+    <td rowspan="3" valign="top" style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+    <td valign="top" class="content_main">
+
+    <!-- NEWS -->
+
+    <span class="content_main_bold">Latest news</span>
+
+      <br><br>
+
+
+
+      <span class="content_main_bold">19/01/2009<br>New website</span><br>
+      The new website is online! This web site has been designed by Bas Uildriks and is a real looker. Thanks Bas!
+
+      <br><br>
+
+      <span class="content_main_bold">08/01/2009<br>3.4.7 has been released</span><br>
+      This release fixes the reporting functionality and contains fixes for other minor issues.
+
+
+     <!-- NEWS END -->
+
+  </td>
+
+
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td height="20" style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+  <tr>
+    <td></td>
+    <td valign="top" class="content_main"><span class="content_main_bold">Quick link:</span><br><br>
+    <table width="100%" border="0" cellpadding="0" cellspacing="0">
+  <tr>
+    <td colspan="3" class="menu1o">Full version</td>
+    </tr>
+
+
+  <!-- DOWNLOAD -->
+
+  <tr>
+    <td class="menu2" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_zipped.zip' onmouseover=this.className='menu2o' onMouseOut=this.className='menu2'>Zipped</td>
+    <td class="menu3" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.zip' onmouseover=this.className='menu3o' onMouseOut=this.className='menu3'>Installer</td>
+    <td class="menu4" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_installer.exe' onmouseover=this.className='menu4o' onMouseOut=this.className='menu4'>Winstaller</td>
+  </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu8o">Web module</td>
+    </tr>
+  <tr>
+    <td class="menu7" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_zipped.zip' onmouseover=this.className='menu7o' onMouseOut=this.className='menu7'>Zipped</td>
+    <td class="menu6" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.zip' onmouseover=this.className='menu6o' onMouseOut=this.className='menu6'>Installer</td>
+    <td class="menu5" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/webmodule_1_2_installer.exe' onmouseover=this.className='menu5o' onMouseOut=this.className='menu5'>Winstaller</td>
+  </tr>
+
+  <!-- END DOWNLOAD -->
+
+  <tr>
+    <td height="10" colspan="3"></td>
+    </tr>
+  <tr>
+    <td colspan="3" class="menu10" onClick=window.top.location.href='http://dfn.dl.sourceforge.net/sourceforge/datacrow/datacrow_3_4_7_source.zip' onmouseover=this.className='menu10o' onMouseOut=this.className='menu10'>Source code</td>
+    </tr>
+  <tr>
+    <td height="10" colspan="3"></td>
+  </tr>
+  <tr>
+    <td colspan="3" class="menu9" onClick=window.top.location.href='download.html' onmouseover=this.className='menu9o' onMouseOut=this.className='menu9'>Go to Download page</td>
+  </tr>
+    </table>
+    </td>
+    <td style="background-image: url('pics/table_bg_right.png'); background-repeat: repeat-x;"></td>
+  </tr>
+  <tr>
+    <td height="20"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+    <td style="background-image: url('pics/table_bg_bottom.png'); background-repeat: repeat-y;"></td>
+    <td style="background-image: url('pics/table_bg_corner.png');"></td>
+  </tr>
+</table>
+
+    </td>
   </tr>
   <tr>
     <td height="65" background="pics/SCREENSHOTS_footer.jpg"></td>
