*** empty log message ***

--- a/homepage/faq.html
+++ b/homepage/faq.html
@@ -116,6 +116,15 @@
             -dir: parameter.
             <br><br>
 
+            <span class="content_main_bold">How do I run the web module?</span><br><br>
+            The web module needs to be installed into the same folder as the Data Crow software. If it is installed anywhere else
+            it will fail to start. Another thing to check is the firewall and virus scanner settings and permissions.
+            <br><br>
+            The web module can be started from within Data Crow from the web server menu. Alternatively it can be started from the
+            console by using the webserver.sh or the webserver.bat files or by entering the following command manually:<br>
+            java -Xmx512m -jar datacrow.jar -webserver
+            <br><br>
+
             <span class="content_main_bold">What is the "new" tab about?</span><br><br>
 
             The new item tab holds items eligible to be saved to the database. It's Data Crow waiting room.
@@ -130,13 +139,11 @@
             <br><br>
 
             <span class="content_main_bold">I would like to have feature X in Data Crow</span><br><br>
-
             Please go to the contact page and follow the directions from there
             <br><br>
 
             <span class="content_main_bold">Java programs are known for high memory usage and low performance.
             <br>How's Data Crow performing ?</span><br><br>
-
             First of all the amount of memory used and the performance of the application is
             for the largest part in the hands of the developer. Sloppy programming can kill any
             product or service. Data Crow is a product which potentially deals with huge amounts of data and needs to present
