--- a/homepage/index.html
+++ b/homepage/index.html
@@ -75,20 +75,22 @@
         Don't strain yourself in organizing your items and trying to keep track of their location, start using <h2>the best cataloger</h2>
         today. Start using Data Crow.<br><br>
 
-        <li/> Highly customizable.
-        <li/> Audio, software, book, movie and photo <h1>collection cataloger</h1>
-        <li/> Retrieve information from services like Amazon.com and Imdb.com
-        <li/> Optional web module; web interface + integrated web server
-        <li/> Rename your files based on the item information in Data Crow
-        <li/> Advanced user management
-        <li/> Loan management
-        <li/> PDF and HTML reporting
-        <li/> Easily upgrade to newer versions
-        <li/> Create new modules to, for example, maintain your stamp collection
+        <li/> Highly customizable and feature rich.
+        <li/> Audio, software, book, movie and photo <h1>collection cataloger.</h1>
+        <li/> Retrieve information from services like Amazon.com and Imdb.com.
+        <li/> Optional web module; a web interface and an integrated web server.
+        <li/> Rename your files based on the item information in Data Crow.
+        <li/> Advanced user management.
+        <li/> Loan management.
+        <li/> PDF and HTML reporting.
+        <li/> Create new modules to, for example, maintain your stamp collection.
+        <li/> Easily upgrade to newer versions.
 
         <br><br>
         Data Crow is 100% free and 100% free of ads, viruses and spyware.<br>
-        Data Crow runs on any system where <strong>Java from Sun</strong> is installed.
+        Data Crow runs on any system where <strong>Java from Sun</strong> is installed.<br><br>
+        <a href="http://sourceforge.net" target="information"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" width="125" height="37" border="0" alt="SourceForge.net Logo" /></a><br>
+        <i>Data Crow is hosted on sourceforge.net</i>
 
     </div>
 
